Advancements grow island protection range and give Challenges-style rewards
Port the core mechanic from Boxed: each advancement has a score that
grows the island's protected area, clamped to the island range, with a
self-healing size check on world entry based on the game mode's default
protection range. Add a Reward model (items, experience, Vault money,
commands) applied per advancement with category defaults for roots,
recipes and unlisted advancements. advancements.yml entries may be a
plain score or a section with protection-range and rewards. Add
deny-visitor-advancements setting, placeholders, and onReload support.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01TkJkpGscJArpcuy1ynp8FA